--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-env": "^7.7.1",
     "@material-ui/core": "^4.6.0",
     "@material-ui/styles": "^4.6.0",
+    "mtgsdk": "^0.4.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
